# flap_lite

./: LICENSE  README.md  pyproject.toml  requirements.txt
projects/examples/: seed_uprn_to_addresses.py
src/: main.py
src/alignment/: __init__.py  linear_assignment_alignment.py  needleman_wunsch_alignment.py
src/database/: build_cli.py  build_interactive.py  sql.py
src/database_compile/: db_expansion.py
src/distance/: __init__.py  distance.py  letter_freq_sim.py
src/flap/: __init__.py
src/flap-lite/parser/: multiplier_index.csv  rule_parser_fast.py
src/flap-lite/preprocessing/: __init__.py
src/flap-lite/utils/: progress_map.py
src/flap/alignment/: __init__.py  linear_assignment_alignment.py
src/flap/api/: __init__.py  database_setup.py  match.py  score.py  score_and_match.py
src/flap/database/: db_build_vocabulary.py  db_import.py  db_index.py  sql.py  sql_in_memory.py
src/flap/evaluation/: __init__.py
src/flap/matcher/: sql_matcher.py
src/flap/model/: __init__.py
src/flap/parser/: rule_parser_fast.py  thoroughfare_patterns.json
src/flap/preprocessing/: __init__.py
src/flap/utils/: __init__.py  cpu_count.py  progress_map.py
src/matcher/: sql_matcher.py
src/parser/: __init__.py  multiplier_indexing.py  pc1_mappings_region.json  rule_parser.py  rule_parser_class.py  rule_parser_fast.py
src/pipelines/: match.py  nw_alignment.py  output_summary.py  tree_align.py
src/preprocessing/: __init__.py
src/project/: project.py
src/tree/: __init__.py
src/utils/: __init__.py  progress_map.py
