[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "flap-lite"
version = "0.6.19"
authors = [
  { name="Huayu Zhang", email="huayu.zhang@ed.ac.uk"},
]
description = "An open-source tool for linking free-text addresses to UPRN"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Unix",
]

dependencies = [
    "attrs==22.2.0",
    "certifi==2022.12.7",
    "click==8.1.3",
    "click-plugins==1.1.1",
    "cligj==0.7.2",
    "et-xmlfile==1.1.0",
    "Fiona==1.9.2",
    "geopandas==0.12.2",
    "importlib-metadata==6.1.0",
    "joblib==1.2.0",
    "munch==2.5.0",
    "numpy==1.24.2",
    "openpyxl==3.1.2",
    "packaging==23.0",
    "pandas==1.5.3",
    "psutil==5.9.6",
    "pyproj==3.5.0",
    "python-dateutil==2.8.2",
    "pytz==2023.3",
    "scikit-learn==1.2.2",
    "scipy==1.10.1",
    "shapely==2.0.1",
    "six==1.16.0",
    "threadpoolctl==3.1.0",
    "tqdm==4.65.0",
    "tzdata==2023.3",
    "zipp==3.15.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
flap = ["parser/*.json", "parser/*.csv"]

[project.urls]
"Homepage" = "https://github.com/huayu-zhang/flap_lite"
"Bug Tracker" = "https://github.com/huayu-zhang/flap_lite/issues"
